# cli

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  SECURITY_REVIEW.md  SECURITY_SUMMARY.md  app.py  create_owner_user.sh  pyproject.toml  run.sh
.github/workflows/: docker.yml  release.yml
scripts/: package.sh
src/: api.rs  config.rs  instances.rs  lib.rs  main.rs  main.rs.pre_cleanup  routes.rs  templates.rs  users.rs  util.rs  wizard.rs
src/api/: applications.rs  backups.rs  client.rs  floating_ips.rs  images.rs  instances.rs  iso.rs  mod.rs  operating_systems.rs  products.rs  regions.rs  snapshots.rs  ssh_keys.rs
src/handlers/: access.rs  auth.rs  backups.rs  catalog.rs  clocked_instances.rs  floating_ips.rs  helpers.rs  images.rs  instances.rs  iso.rs  mcp_docs.html  mcp_docs.rs  mcp_logs.html  middleware.rs  mod.rs  security_middleware.rs  snapshots.rs  ssh_keys.rs  stubs.rs  system.rs  users.rs  wizard.rs  workspaces.rs
src/instances/: handlers.rs  mod.rs  models.rs
src/mcp/: log.rs  mod.rs  server.rs  tools.rs
src/models/: add_traffic_form.rs  admin_view.rs  app_state.rs  application_view.rs  base_state.rs  change_os_form.rs  confirmation.rs  current_user.rs  custom_plan_form_values.rs  custom_plan_specification_form.rs  extras.rs  instance_view.rs  mod.rs  network_configuration_form.rs  (+18 more)
static/: 4k.css  desktop.css  large-desktop.css  mobile.css  phone.css  responsive.css  styles.css  tablet.css  ultra-wide.css
templates/: about.html  access.html  applications.html  backups.html  base.html  bulk_refund.html  bulk_refund_result.html  change_os.html  change_os_instance.html  change_pass_instance.html  clocked_instances.html  coming_soon.html  confirm.html  create.html  delete_instance.html  floating_ips.html  images.html  index.html  instance_detail.html  instances.html  isos.html  login.html  os.html  permissions.html  poweroff_instance.html  poweron_instance.html  products.html  regions.html  reset_instance.html  resize.html  snapshot_detail.html  snapshots.html  ssh_key_detail.html  ssh_keys.html  step_1.html  step_2.html  step_3_fixed.html  step_4.html  step_5.html  step_6.html  (+8 more)
tests/: config_tests.rs  integration_test.rs
(+96 files in other folders)
