[package]
name = "zy"
version = "1.0.2"
edition = "2021"

[lib]
name = "zy"
path = "src/lib.rs"

[[bin]]
name = "zy"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
askama = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs", "set-header"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
axum-extra = { version = "0.9", features = ["cookie"] }
time = { version = "0.3", features = ["macros"] }
urlencoding = "2"
clap = { version = "4.2", features = ["derive"] }
cookie = "0.16"
yansi = "1.0.1"
comfy-table = "7.2.1"
terminal_size = "0.4.3"
chrono = "0.4"
